tests/neg/ref.check
17 |   par[{a}, {op}](printA, op)
   |   ^^^^^^^^^^^^^^

     Separation error: {a} and {op} are not separated
